test/echoheaders-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoheaders
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - echoheaders.testing.freestyleiot.com
    secretName: echoheaders-tls

  rules:
  - host: echoheaders.testing.freestyleiot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echoheaders
          servicePort: 80
